[package]
name = "opensea-stream"
description = "Client for receiving updates from the OpenSea Stream API over websockets"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joergkiesewetter/opensea-stream-rs"
categories = ["web-programming::websocket", "cryptography::cryptocurrencies"]
keywords = ["opensea", "stream", "nft"]
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
ethers-core = "2.0.8"
futures-util = { version = "0.3.28", default-features = false, features = ["sink"] }
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
serde_with = { version = "3.1.0", features = ["chrono"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls", "rustls-tls"] }
url = { version = "2.4.0", features = ["serde"] }

